# HW2-OOP-Template

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: test.yml
libs/: CMakeLists.txt
libs/exponential/include/: Exponential.h
libs/exponential/src/: Exponential.cpp
libs/expression/include/: Add.h  Const.h  Divide.h  Expression.h  Multiply.h  Negate.h  Subtract.h  Variable.h
libs/expression/src/: Divide.cpp  Expression.cpp  Multiply.cpp  Negate.cpp  Subtract.cpp
test/: CMakeLists.txt
test/exponential/: ExponentialTests.cpp
test/expression/: ExpressionTests.cpp
